syntax = "proto3";

package product;

option go_package = "app/grpc/models/product";


message ProductResponse {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 price = 4;
    string category = 5;
    string seller = 6;
    string slug = 7;
}

message ProductListResponse {
    bool success = 1;
    string status = 2;
    int32 code = 3;
    repeated ProductResponse data = 4;
}

message ShowProductRequest {
    int32 id = 1;
}

message StoreProductRequest {
    string name = 1;
    string description = 2;
    int32 price = 3;
    string category = 4;
    string seller = 5;
}

message UpdateProductRequest {
    string name = 1;
    string description = 2;
    int32 price = 3;
    string category = 4;
    string seller = 5;
    int32 id = 6;
}

message DeleteProductRequest {
    int32 id = 1;
}

message WriteProductResponse {
    bool success = 1;
    string status = 2;
    int32 code = 3;
    ProductResponse data = 4;
}

message Void {   
}

service Product {
    rpc List(Void) returns (ProductListResponse);
    rpc Show(ShowProductRequest) returns (ProductResponse);
    rpc Store(StoreProductRequest) returns (WriteProductResponse);
    rpc Update(UpdateProductRequest) returns (WriteProductResponse);
    rpc Delete(DeleteProductRequest) returns (WriteProductResponse);
}

